Fixed the image issue not showing in prod temporarily

--- a/src/_styles/property.module.css
+++ b/src/_styles/property.module.css
@@ -7,8 +7,9 @@
 
 .image_container{
   padding-bottom: var(--padding);
-  display: flex;
+  display: grid;
   gap: 30px;
+  grid-template-columns: 2fr 1fr;
 }
 
 .properties_container{
@@ -18,7 +19,8 @@
 
 .hero{
   max-height: 75vh;
-  width: 70%;
+  width: 100%;
+  height: 100%;
 }
 
 .hero_side_container{
@@ -26,10 +28,12 @@
   grid-template-rows: repeat(2, 1fr);
   gap: 15px;
   max-height: 75vh;
+  width: 100%;
 }
 
 .hero_side{
   height: 100%;
+  width: 100%;
 }
 
 .section{
@@ -53,8 +57,8 @@
 }
 
 @media screen and (width < 1025px) {
-  .hero{
-    width: 100%;
+  .image_container{
+    grid-template-columns: 1fr;
   }
   .hero_side_container{
     display: none;
